--- a/style.css
+++ b/style.css
@@ -1,11 +1,35 @@
-body{
-    text-align: center;
+#1 {
+    text-align: left;
 }
-#lfs{
-    color: hotpink;
+
+#lfs {
+    color: rebeccapurple;
     font-size: 50px;
+    margin-top: 5px;
 }
 
-#pic{
+#school {
+    padding-left: 12px;
+    padding-bottom: 18px;
+    margin-top: 30px
+}
 
+#title {
+    font-size: 23px;
+}
+
+#cont {
+    font-size: 40px;
+}
+
+#slogan {
+    font-size: 23px;
+}
+
+#about {
+    font-size: 20px;
+}
+
+.i{
+    size: 25px;
 }
